test/libsolidity/syntaxTests/nameAndTypeResolution/061_missing_base_constructor_arguments.sol
contract A { constructor(uint a) { } }
contract B is A { }
// ----
// TypeError 3656: (39-58='contract B is A { }'): Contract "B" should be marked as abstract.
